Add style to game board div

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,3 +11,14 @@
 body {
     font-family: Raleway, sans-serif;
 }
+
+.game-board {
+    border: 1px solid black;
+    width: 95%;
+    max-width: 900px;
+    height: 75vh;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
