--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,13 +12,17 @@ body {
     font-family: Raleway, sans-serif;
 }
 
+/* Style main game board and background */
+
 .game-board {
     border: 1px solid black;
     width: 95%;
     max-width: 900px;
-    height: 75vh;
+    height: 80vh;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    background-image: url(../images/10-downing-street-bg.png);
+    background-size: cover;
 }
