--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,13 @@
 
 body {
     font-family: Raleway, sans-serif;
-}
+  }
+
+  html {
+    background-image: url(../images/union-jack.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
 
 /* Style main game board and background */
 
