--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,4 +78,12 @@ button {
     width: 800px;
     height: 400px;
     margin: 50px auto 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.mole-hole {
+    border: 2px solid yellow;
+    flex: 1 0 33.33%;
+
 }
