--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,6 +84,7 @@ button {
 .mole-hole {
     flex: 1 0 33.33%;
     position: relative;
+    overflow: hidden;
 }
 
 .mole-hole:after {
@@ -96,7 +97,7 @@ button {
     height: 50px;
     left: 35%;
     z-index: 2;
-    bottom: -10px;
+    bottom: 10px;
     background-size: contain;
     background-repeat: no-repeat;
 }
@@ -106,7 +107,7 @@ button {
 .boris {
     background-image: url(../images/boris-popup.png);
     position: absolute;
-    top: 0;
+    top: 100%;
     width: 100%;
     height: 100%;
     background-repeat: no-repeat;
@@ -114,4 +115,9 @@ button {
     transition: 0.5s;
     background-size: 60%;
     z-index: 3;
+}
+
+.mole-hole.peek .boris {
+    top: 0;
+    transition: 0.5 ease-in-out;
 }
