Assign rules functions to open and close buttons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,7 +126,7 @@ button {
 /* Styling Rules Pop Up - Hidden by default */
 
 .rules {
-    display: block;
+    display: none;
     position: absolute;
     left: 50%;
     transform: translate(-50%, -50%);
