--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,13 +31,18 @@ body {
     transform: translate(-50%, -50%);
     background-image: url(../images/10-downing-street-bg.png);
     background-size: cover;
-    cursor: url(../images/cursor-protocol.png), crosshair;
+    cursor: url("../images/cursor-protocol.png"), crosshair;
 }
 
 /* Style Score Counter and Timer */
 
+.time-score-area {
+    display: flex;
+}
+
 .score,
-.time {
+.time,
+.miss {
     color: #ed4d29;
     font-size: 5em;
 }
@@ -48,10 +53,19 @@ body {
     left: 20px;
 }
 
+.miss {
+    position: absolute;
+    top: 80px;
+    left: 20px;
+}
+
 .time {
     position: absolute;
     top: 20px;
     right: 20px;
+}
+i {
+    font-size: 0.6em;
 }
 
 /* Style Start and Rules Buttons */
@@ -77,7 +91,7 @@ button {
 .hole-area {
     width: 800px;
     height: 400px;
-    margin: 100px auto 0 auto;
+    margin: 200px auto 0 auto;
     display: flex;
     flex-wrap: wrap;
 }
