--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,9 +13,7 @@ body {
   }
 
   html {
-    background-image: url(../images/union-jack.png);
-    background-size: cover;
-    background-repeat: no-repeat;
+    background-color: #6A889C;
   }
 
 /* Style main game board and background */
@@ -29,7 +27,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-image: url(../images/10-downing-street-bg.png);
+    background-image: url(../images/10-downing-street-bg-fleg-cartoom.png);
     background-size: cover;
     cursor: url("../images/cursor-protocol.png"), crosshair;
 }
