Add star icon to feedback form label

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,3 +179,8 @@ button {
     justify-content: center;
     flex-direction: column;
 }
+
+.star-container .star-rating input {
+    display: none;
+    
+} 
