--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,7 +89,6 @@ body {
 
 button {
     cursor: pointer;
-    padding: 10px 50px;
     outline: none;
 }
 
@@ -151,13 +150,16 @@ button {
 .final-score {
     display: none;
     position: absolute;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     left: 50%;
     transform: translate(-50%, -50%);
     transition: 400ms ease-in-out;
-    border: 1px solid black;
+    border: 1px solid #ed4d29;
     border-radius: 10px;
-    background-color: #fff;
-    width: 600px;
+    background-color: rgba(106, 136, 156, 0.9);
+    width: auto;
     height: 400px;
     z-index: 100;
 }
@@ -168,19 +170,34 @@ button {
     justify-content: space-evenly;
 }
 
+#close-feedback {
+    position: absolute;
+    top: 5px;
+    right: 10px;
+f   ont-size: 20px;
+}
+
 /* Styling star rating in feedback form */
 
 .star-container {
     position: relative;
     width: 400px;
-    background-color: rgba(106, 136, 156, 0.9);
     padding: 20px 30px;
-    border: 1px solid #ed4d29;
     border-radius: 5px;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+}
+
+.star-container .thank-you-text {
+    font-size: 25px;
+    color: #fff;
+    font-weight: 900;
+}
+
+.star-container .submitted {
+    display: none;
 }
 
 .star-container .star-rating input {
