--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,6 +143,45 @@ button {
     transition: 0.5 ease-in-out;
 }
 
+/* Styling score pop up */
+
+.final-score {
+    padding: 0 10px 0 10px;
+}
+
+.final-score h2 {
+    color: #20292f;
+    font-size: 30px;
+}
+
+.final-score p {
+    font-size: 25px;
+    text-align: center;
+}
+
+.fscorebtn {
+    border: 1px solid #ed4d29;
+    outline: none;
+    background-color:#ed4d29;
+    color: #40525e;
+    font-size: 15px;
+    font-weight: 900;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.fscorebtn:hover {
+    color:#ed4d29;
+    background-color: #40525e;
+}
+
+
+#fscore {
+    font-size: 100px;
+    font-weight: 900;
+    color: #ed4d29;
+}
+
 /* Styling Rules and Feedback Pop Up - Hidden by default */
 
 .feedback,
@@ -187,6 +226,7 @@ button {
     background-color: rgba(106, 136, 156, 0.9);
     width: 600px;
     height: 400px;
+    line-height: 1.3;
     z-index: 100;
 }
 
@@ -209,6 +249,7 @@ button {
     color: #20292f;
 }
 
+#close-score,
 #close-feedback,
 #close-rules {
     position: absolute;
