--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@ body {
     transform: translate(-50%, -50%);
     background-image: url(../images/10-downing-street-bg-fleg-cartoom.png);
     background-size: cover;
-    cursor: url("../images/cursor-protocol.png"), crosshair;
+    cursor: url(../images/cursor-protocol.cur), url(../images/cursor-protocol.png), crosshair;
 }
 
 /* Style Score Counter and Timer */
