--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,8 +61,10 @@ body {
 .time,
 .miss {
     color: #ed4d29;
-    background-color: rgba(106, 136, 156, 0.9);
+    background-color: rgba(106, 136, 156, 1);
+    border-radius: 20px;
     font-size: 5em;
+    font-weight: 900;
 }
 
 /* Style individual counter elements */
@@ -88,11 +90,28 @@ body {
     position: absolute;
     top: 20px;
     left: 5px;
+    color: #ed4d29;
+}
+
+.hit h3 {
+    position: absolute;
+    left: 25px;
+    font-weight: 900;
+    -webkit-text-stroke: 1px black;
 }
 .no-hit {
     position: absolute;
     top: 80px;
     left: 5px;
+    color: #ed4d29;
+}
+
+.no-hit h3 {
+    position: absolute;
+    left: 25px;
+    top: 55px;
+    font-weight: 900;
+    -webkit-text-stroke: 1px black;
 }
 
 /* Style Start and Rules Buttons */
