--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,8 @@ body {
     border-radius: 20px;
     font-size: 5em;
     font-weight: 900;
+    display: flex;
+    align-items: center;
 }
 
 /* Style individual counter elements */
@@ -85,6 +87,9 @@ body {
     position: absolute;
     top: 20px;
     right: 20px;
+}
+.time p {
+    font-size: 15px;
 }
 .hit {
     position: absolute;
