Change game title font

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,7 @@ body {
     font-size: 1.75em;
     padding-top: 10px;
     color: #ed4d29;
+    font-family: Fredoka, sans-serif;
 }
 
 /* Style mute button */
