--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -260,7 +260,7 @@ button {
 
 .mole-hole.peek .boris {
     top: 0;
-    transition: 0.5 ease-in-out;
+    transition: 0.5s ease-in-out;
 }
 
 /* Styling score pop up */
