Change font colour of timer and score counters

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,7 +118,7 @@ body {
 .score,
 .time,
 .miss {
-    color: #ed4d29;
+    color: #40525e;
     background-color: rgba(106, 136, 156, 1);
     border-radius: 20px;
     font-size: 5em;
